<resources>
    <string name="app_name">MMOY</string>

    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="login">Login</string>
    <string name="btnLogin">Login</string>
    <string name="moviefy">Moviefy</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="rating">rating</string>
    <string name="description">Description</string>
    <string name="release_date">release_date</string>
    <string name="name">Name</string>
    <string name="click_to_select_your_date_of_birth">Click Here To Select Your Date Of Birth</string>
    <string name="add_your_important_tasks">Add Your Important Tasks</string>
    <string name="task_description">Task Description</string>
    <string name="task_priority">Task Priority:</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="deadline_information">DeadLine Information:</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="add_task">Add Task</string>
    <string name="welcome_to_your_study_manager">Welcome to your Study Manager</string>
    <string name="view_your_task">View Your Task</string>

    <string-array name="restorans">
        <item>Faculty of Economics and Commerce</item>
        <item>Pharmacy Cafeteria</item>
        <item>vanaila</item>
        <item>Science Cafeteria</item>
        <item>Literature cafeteria</item>
        <item>Maramia</item>
        <item>Mahta</item>
        <item>topshawerma</item>
        <item>coktallRanush</item>
        <item>notella</item>
        <item>Tost</item>
        <item>pastries</item>

    </string-array>
</resources>